Fixed we choose us text size on small screens.

--- a/theme/elf/css/index.css
+++ b/theme/elf/css/index.css
@@ -182,10 +182,16 @@
  */
 @media screen and (max-width: 39.9375em) {
 
+	/* Home Sections
+   ============================= */
+	.home-section .title h2 {
+		font-size: 1.5rem;
+	}
+
 	/* Why Choose Us View
    ============================= */
 	.why-choose-us-container .reason {
-		font-size: 0.3em;
+		font-size: 0.2em;
 		border-bottom: 1px solid #EEE;
 	}
 	.why-choose-us-container .reason .fa {
@@ -194,7 +200,7 @@
 	}
 	.why-choose-us-container .reason .text {
 		font-size: 5em;
-		padding-left: 2em;
+		padding-left: 3em;
 	}
 }
 
